<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_margin="5dp"
   
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
       
        android:layout_height="wrap_content"
        android:text="@string/land"
          android:textAppearance="?android:attr/textAppearanceMedium" />
<EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/acre" />
   
</LinearLayout>

    <TextView
        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:text="@string/cattles"
        
         android:textAppearance="?android:attr/textAppearanceMedium"/>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    
    >
    
       <RadioGroup 
	    android:id="@+id/radioGroup1"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:orientation="horizontal"
	    >
    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"/>

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no" />
    </RadioGroup>
</LinearLayout>


    <TextView
        android:layout_margin="5dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosecattle"
          android:textAppearance="?android:attr/textAppearanceMedium" />
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    >
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/count"
        android:inputType="number"
        android:textSize="9sp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcattles"/>
</LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" 
        android:layout_gravity="center"
       
 
        />

</LinearLayout>
