<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_margin="5dp" >

<EditText
    android:id="@+id/editText1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/Enter_Your_Mobile_No" >

<requestFocus />
</EditText>

	<EditText
	    android:id="@+id/editText2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/Enter_Your_Password" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
     android:layout_margin="5dp">

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.90"
	    android:text="@string/login" />

</LinearLayout>

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/createaccount" />

<Button
    android:id="@+id/button2"
    android:layout_width="184dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/register" />


</LinearLayout>
