<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:layout_margin="10dp"
   android:orientation="vertical" 
>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:orientation="horizontal" 
   >
    
    
    
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  
    android:gravity="center"
    android:orientation="vertical" 
   >
    <Button
        android:id="@+id/button1"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farmer_login"
        android:layout_marginTop="5dp"
  
    
    />
    

    <Button

        android:id="@+id/button2"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vendor_login" 
        android:layout_marginTop="5dp"
      
        />

    <Button    
        android:id="@+id/button3"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tool_and_service_login" />
</LinearLayout>
</LinearLayout>
