<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manpower"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
  <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
      android:layout_margin="5dp" >
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
     
        android:src="@drawable/man1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
           android:layout_marginLeft="5dp"
        android:src="@drawable/builder1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
           android:layout_marginLeft="5dp"
        android:src="@drawable/poultry" />
   
</LinearLayout>

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/select_manpower"
      android:textAppearance="?android:attr/textAppearanceMedium" />

  <Spinner
      android:id="@+id/spinner1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
       android:layout_margin="5dp">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.19"
        android:ems="10"
        android:hint="@string/rate" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="10"
        android:hint="@string/count" />

   
</LinearLayout>

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:text="@string/addnew" />

</LinearLayout>
