<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyer"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_items"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
   android:layout_margin="5dp" >
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />
<Spinner
    android:id="@+id/spinner2"
    android:layout_width="104dp"
    android:layout_height="wrap_content" />


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.18"
        android:ems="10"
        android:hint="@string/price" />

</LinearLayout>


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addnew"></Button>
</LinearLayout>
